<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧课堂</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <color name="red">#FF7978</color>
    <color name="white">#ffffff</color>
    <color name="black">#000000</color>
    <color name="black_half">#50000000</color>
    <color name="gray">#666666</color>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_password_again">请再次输入密码</string>
    <string name="input_username">请输入用户名</string>
    <string name="sign_up">签到</string>
    <string name="sign_uped">已签到</string>
    <string name="ask_question">提问</string>
    <string name="project_list">项目</string>
    <string name="course_list">课程列表</string>
    <color name="transparent">#00000000</color>
    <color name="orange">#FF7F00</color>
    <color name="blue">#0000FF</color>
    <color name="yellow">#DBDB70</color>
    <color name="purple">#9F5F9F</color>
    <string name="personal_info">个人信息</string>
    <string name="personal_setting">个人设置</string>
    <string name="have_not_make_team_hint">本项目您尚未组队。这里可以选择您想与之共事的小伙伴进行组队。您可以选择开始组队或者查看您收到的组队邀请。请注意，如果您首先发起一个组队，您将自动成为队长。确认则请开始组队。</string>
    <string name="name">姓名</string>
    <string name="telephone">手机号</string>
    <string name="mail">邮箱</string>
    <string name="select_teammate">选择团队成员</string>
    <string name="confirm_team">确认组队并成为队长</string>
    <string name="have_confirmed_team">已确认组队并向您的团队成员发送通知，等待确认</string>
    <string name="select_project_title">项目选题</string>
    <string name="your_project_title">您的项目选题是</string>
    <string name="your_teammate">您的小伙伴是</string>
    <string name="your_position">您的职位是</string>
    <string name="your_finish_time">您的项目结束时间是</string>
    <string name="look_make_team_invitation">点击查看收到的组队邀请</string>
    <string name="fold_invitation">点击收起组队邀请</string>
    <string name="edit_info">编辑</string>
    <color name="light_gray">#AAAAAA</color>
    <string name="start_team">点击发起组队</string>
    <string name="fold_start_team">点击收起组队</string>
    <string name="agree">同意</string>
    <string name="setting">设置</string>
    <string name="notify">通知中心</string>
    <string name="about_us">关于我们</string>
    <string name="logout">登出</string>
    <string name="about_us_content">我们是smartclass开发组，保留所有权利。我们的联系方式是XXX-XXXXXXXX。欢迎向我们提供反馈和建议。</string>
    <string name="class_info">Course</string>
    <string name="test_list">测试</string>
    <string name="my_course">我的课程</string>
    <string name="add_course">添加课程</string>
    <string name="username">用户名</string>
    <string name="password">密  码</string>
    <string name="abs">概述</string>
    <string name="important_date">重要日期</string>
    <string name="midterm_exam">期中考试：2015/6/18</string>
    <string name="final_exam">期末考试：2015/6/18</string>
    <string name="put_forward">提交</string>
    <string name="save">保存</string>
</resources>
