<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/course_img"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:gravity="center_vertical"
            android:src="@drawable/cn5" />

        <TextView
            android:id="@+id/course_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/course_img"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="17sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abs"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/course_introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important_date"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/midterm_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/midterm_exam" />

        <TextView
            android:id="@+id/final_exam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/final_exam" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

        <RelativeLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:id="@+id/sign_uped"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_uped"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/sign_uped_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0/0"
                android:layout_toRightOf="@id/sign_uped"
                android:gravity="center_vertical"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="25dp"
                android:text="@string/sign_up"
                android:layout_alignParentRight="true"
                android:textSize="15sp"
                android:background="@color/red"
                android:textColor="@color/white"/>
            </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/test_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/test_list_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/project_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/project_list_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_list" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        android:id="@+id/ask_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/ask_question_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_question" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

</LinearLayout>