<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <ListView
            android:id="@+id/course_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/personal_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/personal_info_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_info" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/add_course_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_course" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/notify_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/notify_center_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/about_us_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/log_out_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout" />

        </LinearLayout>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>