<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/have_not_make_team_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/have_not_make_team_hint" />

    <LinearLayout
        android:id="@+id/make_team_extended_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/new_team_extended_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_team"/>

        <ImageView
            android:id="@+id/line_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/black_line"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/make_team_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/select_teammate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_teammate" />

            <EditText
                android:id="@+id/input_teammate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/select_project_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_project_title" />

            <Spinner
                android:id="@+id/project_elector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/select_project_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_project_title" />

            <Spinner
                android:id="@+id/project_elector2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/select_project_title3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_project_title" />

            <Spinner
                android:id="@+id/project_elector3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/confirm_team"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/red"
            android:text="@string/confirm_team"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/look_invitation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/invitations_extended_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fold_invitation"/>

        <ImageView
            android:id="@+id/line_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/black_line"/>

    </LinearLayout>

    <ListView
        android:id="@+id/invitations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"></ListView>
</LinearLayout>
